Add swagger docstring and generate.
